
  - The nre module has been added, providing a better interface to PCRE than re.
  - The ``expandSymlink`` proc has been added to the ``os`` module.
  - The ``tailDir`` proc has been added to the ``os`` module.
  - Define ``nimPinToCpu`` to make the ``threadpool`` use explicit thread
    affinities. This can speed up or slow down the thread pool; it's up to you
    to benchmark it.


  Language Additions
  ------------------

  - ``system.unsafeAddr`` can be used to access the address of a ``let``
    variable or parameter for C interoperability. Since technically this
    makes parameters and ``let`` variables mutable, it is considered even more
    unsafe than the ordinary ``addr`` builtin.
  - Added ``macros.getImpl`` that can be used to access the implementation of
    a routine or a constant. This allows for example for user-defined inlining
    of function calls.
  - Tuple unpacking finally works in a non-var/let context: ``(x, y) == f()``
    is allowed. Note that this doesn't declare ``x`` and ``y`` variables, for
    this ``let (x, y) == f()`` still needs to be used.


  Bugfixes
  --------


2015-05-04 Version 0.11.2 released
==================================

This is just a bugfix release that fixes the most pressing regressions we
introduced with version 0.11.0. The way types are computed was
changed significantly causing all sort of problems. Sorry for the
inconvenience; we grew overconfident our large test suite would prevent these
things.


2015-04-30 Version 0.11.0 released
==================================

With this release we are one step closer to reaching version 1.0 and by
extension the persistence of the Nim specification. As mentioned in the
previous release notes, starting with version 1.0, we will not be introducing
any more breaking changes to Nim.

The *language* itself is very close to 1.0, the primary area that requires
more work is the standard library.
